@@ -38,3 +38,13 @@ update web-pages (gtk-web/gtk-doc)
 if we want a icon on the newsfeed, we should copy a icon like on
   http://ftp.acc.umu.se/pub/GNOME/sources/rhythmbox/rhythmbox.png
   e.g. /usr/share/icons/hicolor/48x48/apps/devhelp.png
+  
+Optimizing & Meassuring
+=======================
+
+cd tests/gobject/docs/html
+time xsltproc --nonet --xinclude --stringparam gtkdoc.bookname "tester" --stringparam gtkdoc.version "1.12" ../../../../gtk-doc.xsl ../tester-docs.xml
+~ 3 sec.
+time saxon ../tester-docs.xml ../../../../gtk-doc.xsl gtkdoc.bookname="tester" gtkdoc.version="1.12"
+~ 53 sec.
+
