@@ -185,11 +185,13 @@ tools:
   source-highlight -i./tests/gobject/examples/gobject.c -o$HOME/temp/gobject.html -n -t4 -sc -cstyle.css --no-doc
   source-highlight -i./tests/gobject/examples/gobject.c -o$HOME/temp/gobject.xml -n -t4 -sc -f docbook
   
+  highlight -itests/gobject/examples/gobject.c -o$HOME/temp/gobject.xml -l -H -f -j2
+  
 if we highlight to docbook, we just get emphasis (bold)
 if we hightlight to html we get colors, we need to cehck what tags we should process though:
 <pre class="programlisting"> is used for all code boxes.
 <div class="informalexample"><pre class="programlisting"> is used for examples.
-
+  
 links in the same module only work once its installed
 
 = documentation best practises #518427 =
