@@ -7,8 +7,11 @@
 <book id="index" xmlns:xi="http://www.w3.org/2003/XInclude">
   <bookinfo>
     <title>tester Reference Manual</title>
+    <corpauthor>
+      The <ulink url="http://www.gtk.org/gtk-doc">gtk-doc team</ulink>.
+    </corpauthor>
     <releaseinfo>
-      for tester [VERSION].
+      Reference Manual for tester [VERSION].
       The latest version of this documentation can be found on-line at
       <ulink role="online-location" url="http://[SERVER]/tester/index.html">http://[SERVER]/tester/</ulink>.
     </releaseinfo>
