@@ -1,3 +1,15 @@
+2009-01-10  Stefan Kost  <ensonic@users.sf.net>
+
+	* HACKING:
+	* TODO:
+	* configure.in:
+	* gtkdoc-fixxref.in:
+	  Look for source-highlight and highlight. Not perfect yet, highlight uses
+	  different classes in the css :/.
+
+	* tests/gobject/docs/tester-docs.xml:
+	  More header data in the examples.
+
 2009-01-09  Stefan Kost  <ensonic@users.sf.net>
 
 	patch by: David Nečas <yeti@physics.muni.cz>
